# deskbridge

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md
apps/desktop/scripts/: linux-gui-e2e.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/macos/: Package.swift
apps/macos/Resources/: DeskBridge.icns
apps/macos/Sources/DeskBridgeMac/App/: AppDelegate.swift  PortalFlashOverlayController.swift
apps/macos/Sources/DeskBridgeMac/Models/: DeskBridgeModel.swift
apps/macos/Sources/DeskBridgeMac/Views/: DeskBridgeView.swift  PairingView.swift
apps/windows/DeskBridge.Admin/: App.xaml  App.xaml.cs  DeskBridge.Admin.csproj  MainWindow.xaml  MainWindow.xaml.cs
crates/deskbridge-core/: Cargo.toml
crates/deskbridge-core/src/: codec.rs  config.rs  health.rs  layout.rs  lib.rs  pairing.rs  protocol.rs  routing.rs  secure.rs  simulation.rs
crates/deskbridge-daemon/: Cargo.toml
crates/deskbridge-daemon/src/: build_info.rs  capture.rs  client.rs  clipboard.rs  debugctl.rs  diag.rs  discovery.rs  dragdrop.rs  input.rs  main.rs  perf.rs  permissions.rs  server.rs
docs/: ARCHITECTURE.md  CI.md  MACOS.md  NATIVE_FEEL_AUDIT.md  WINDOWS.md
examples/: deskbridge.json
scripts/: build-macos.sh  ensure-local-macos-signing-identity.sh  generate-macos-icons.swift  install-macos-local.sh  package-macos-app.sh  verify-local.sh
