[workspace]
members = [
  "crates/deskbridge-core",
  "crates/deskbridge-daemon",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Hades300/deskbridge"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
core-foundation = "0.10.1"
core-graphics = "0.25.0"
enigo = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
